# GDVG-Admin-Console

./: .dockerignore  .gitignore  .mcp.json  RAILWAY_DEPLOY.md  cloud_schema.sql  find_ollama.sh  middleware.ts  next.config.ts  package-lock.json  package.json  railway.json  run-embedding.bat  run-enrichment.bat  start_ollama.sh  start_output.txt  vercel.json
.claude/: settings.local.json
archives/: Data_Sync_Enhancement_Agent_Guide.md  GDVG-MainApp-Integration-Guide.md  Option_B_Architecture_Migration_Plan.md  task.md
docs/: TESTING_PHASE_9.md  WORKFLOW_TRIGGERS.md  architecture-inventory.md
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/src/gdvg/: __init__.py  config.py
python/src/gdvg/clients/: __init__.py  supabase_client.py  tmdb.py  wikidata.py  wikipedia.py
python/src/gdvg/db/: __init__.py  content.py  people.py  queue.py
python/src/gdvg/enrichment/: __init__.py  content_enricher.py  people_enricher.py  run_enrich_content.py  run_enrich_people.py  wiki_enricher.py
python/src/gdvg/harvester/: __init__.py  id_harvester.py  run_harvest.py
python/src/gdvg/linker/: __init__.py  cast_crew_linker.py
python/src/gdvg/quality/: __init__.py  data_quality.py  run_quality_report.py
python/src/gdvg/sync/: __init__.py  change_tracker.py  run_sync_changes.py
python/src/gdvg/workflows/: embedding.py  enrichment.py
python/src/gdvg/workflows/sources/: search.py  tmdb.py  wikidata.py  wikipedia.py
scripts/: auto-import.ts  bulk-import.ts  data-quality-report.ts  enrich-collections.ts  enrich-content.ts  enrich-people.ts  test-anon.ts  (+20 more)
(+203 files in other folders)
